<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="popilar_movies">Popular Movies </string>
    <string name="stockhawk">Stock Hawk </string>
    <string name="build_it_biiger">Build it Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone </string>
</resources>
