<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thesam.me.myappportfolio.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/fragment_top_margin"
            >

            <Button
                android:id="@+id/popularmovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:background="@color/colorPrimary"
                android:text="@string/popilar_movies"
                />

            <Button
                android:id="@+id/stockhawk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:background="@color/colorPrimary"
                android:text="@string/stockhawk"
                />

            <Button
                android:id="@+id/builditbiger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:background="@color/colorPrimary"
                android:text="@string/build_it_biger"
                />

            <Button
                android:id="@+id/makeyourappmaterail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:background="@color/colorPrimary"
                android:text="@string/make_your_app_material"
                />

            <Button
                android:id="@+id/goubiquitous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:background="@color/colorPrimary"
                android:text="@string/go_ubiquitous"
                />

            <Button
                android:id="@+id/capstonee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:background="@color/colorPrimary"
                android:text="@string/capstone"
                />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
